# IniParse

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ParseIni.cbp  README.md  TODO.md  parseini.cpp  parseini.h  parsetest
Source/: illegal_state.cpp  illegal_state.h  ini_entry.cpp  ini_entry.h  ini_file.cpp  ini_file.h  ini_parser.cpp  ini_parser.h  ini_section.cpp  ini_section.h  inistream.h  parse_error.cpp  parse_error.h  utils.cpp  utils.h
test/: output.ini  short.ini  test.cpp  test.ini
